# SpaceInvaders

./: Makefile  SpaceInvaders.cabal  index.html  package-lock.json
cbits/: main.c  main.h
jsbits/: main.js
src/: Animate.hs  Colors.hs  Main.hs  Parser.hs  RenderLandscape.hs  RenderObject.hs  WorldGeometry.hs
src/WasmUtils/: HGLSubstitutes.hs  WasmImports.hs
workflows/: gh-pages.yml
www/: client.js
