name: SpaceInvaders
version: 0.14.2
cabal-Version: >= 1.10
license: BSD3
license-file: LICENSE
author: Henrik Nilsson, Antony Courtney
maintainer: Ivan Perez <ivan.perez@keera.co.uk>
homepage: http://www.haskell.org/yampa/
category: Game
synopsis: Video game
description: Video game implemented in Yampa.
             .
             <<https://github.com/ivanperez-keera/SpaceInvaders/blob/develop/screenshots/gameplay.gif?raw=true>>
build-type: Simple
extra-source-files: CHANGELOG

executable spaceInvaders
  hs-source-dirs:  src
  ghc-options : -Wall -fno-warn-name-shadowing
  build-Depends: base >= 3 && < 5, array, random, HGL, Yampa >= 0.13.3
               , simple-affine-space >= 0.1 && < 0.3
               , deepseq >= 1.3.0 && < 1.6
  main-is: Main.hs
  default-extensions: Arrows
  Other-Modules:
    Animate
    ColorBindings
    Colors
    Command
    Diagnostics
    IdentityList
    Object
    ObjectBehavior
    Parser
    PhysicalDimensions
    RenderLandscape
    RenderObject
    WorldGeometry
  default-language:
    Haskell2010

executable jsBuild
  hs-source-dirs:  src, src/WasmUtils
  ghc-options : 
    -Wall
    -fno-warn-name-shadowing
    -Wall
    -Wunused-packages
    -no-hs-main
    -optl-mexec-model=reactor
    -optl-Wl
  cpp-options : -DJS_BUILD
  build-Depends: base >= 3 && < 5, array, random, Yampa >= 0.13.3
               , simple-affine-space >= 0.1 && < 0.3
               , deepseq >= 1.3.0 && < 1.6
               , SpaceInvaders
  main-is: Main.hs
  default-extensions: Arrows
  Other-Modules:
    Animate
    ColorBindings
    Colors
    Command
    Diagnostics
    IdentityList
    Object
    ObjectBehavior
    Parser
    PhysicalDimensions
    RenderLandscape
    RenderObject
    WorldGeometry
    WasmImports
    HGLSubstitutes
  default-language:
    Haskell2010

library
  js-sources: jsbits/main.js

executable wasmBuild
  hs-source-dirs:  src, src/WasmUtils
  ghc-options : 
    -Wall
    -fno-warn-name-shadowing
    -Wall
    -Wunused-packages
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=hs_init,--export=runGameStep,--export=malloc,--export=free"
  cpp-options : -DWASM_BUILD
  build-Depends: base >= 3 && < 5, array, random, Yampa >= 0.13.3
               , simple-affine-space >= 0.1 && < 0.3
               , deepseq >= 1.3.0 && < 1.6
  main-is: Main.hs
  default-extensions: Arrows
  Other-Modules:
    Animate
    ColorBindings
    Colors
    Command
    Diagnostics
    IdentityList
    Object
    ObjectBehavior
    Parser
    PhysicalDimensions
    RenderLandscape
    RenderObject
    WorldGeometry
    WasmImports
    HGLSubstitutes
  default-language:
    Haskell2010
  c-sources:        cbits/main.c
  include-dirs:     cbits


source-repository head
  type:     git
  location: git://github.com/ivanperez-keera/SpaceInvaders.git
